--- a/style.css
+++ b/style.css
@@ -33,13 +33,13 @@ nav{
     position: fixed;
     width: 100%;
     background-color: #fff;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 1vw 8vw;
-  align-items: center;
-  box-shadow: 2px 2px 10px rgb(0, 0, 0, 0.15);
-  z-index: 999;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 3vw 9vw;
+    align-items: center;
+    box-shadow: 2px 2px 10px rgb(0, 0, 0, 0.15);
+    z-index: 999;
 }
 nav img{
     width: 150px;
@@ -48,6 +48,26 @@ nav img{
 nav .navigation{
     display: flex;
 }
+.phone-no {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  
+  .phone-call {
+    border: 2px solid black; 
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px 20px;
+    border-radius: 20px;
+    display: flex;
+    gap: 10px;
+    color: black;
+  }
+  .phone-call i{
+    font-size: 23px;
+  }
+  
+  /* The rest of your CSS code for the navigation menu */
+  
 #menu-btn{
     width: 30px;
     height: 30px;
@@ -58,6 +78,7 @@ nav .navigation{
 }
 nav .navigation ul{
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
 }
 nav .navigation ul li{
@@ -66,74 +87,114 @@ nav .navigation ul li{
 }
 nav .navigation ul li a{
     text-decoration: none;
-    color: rgb(21, 21, 100);
-    font-size: 16px;
-    font-weight: 500;
+    color: rgb(9, 9, 17);
+    font-size: 17px;
+    font-weight: 600;
     transition: 0.3s ease;
 }
 nav .navigation ul li a:hover{
-   color: #FDC93B;
+    color: rgb(38, 38, 129);
 }
+
 
 /* Home */
-#home{
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/back.jpg");
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-#home h2{
-    font-size: 2.2rem;
-    color: #fff;
-    letter-spacing: 1px;
-    padding-top: 40px;
-}
-#home p{
-    width: 50%;
-    font-size: 0.9rem;
-    line-height: 25px;
-    color: #fff;
-}
-#home .btn{
-    margin-top: 30px;
-}
-#home a{
-    text-decoration: none;
-    font-size: 0.9rem;
-    padding: 13px 35px;
-    background-color: #fff;
-    font-weight: 600;
-    border-radius: 5px;
-}
-#home a.blue{
-   background-color: rgb(21, 21, 100);
-   color: #fff;
-   transition: 0.3s ease;
-}
-#home a.blue:hover{
-    background-color: #fff;
-    color: rgb(21, 21, 100);
-}
-#home a.yellow{
-   background-color: #FDC93B;
-   color: #fff;
-   transition: 0.3s ease;
-}
-#home a.yellow:hover{
-    background-color: #fff;
-    color: #FDC93B;
+#slider {
+    position: relative;
+    max-width: 100%; /* Adjust the maximum width as needed */
+    margin: 0 auto;
 }
 
-/* features */
-#features{
+/* Style each slide */
+.slide {
+    position: relative;
+    width: 100%;
+    max-height: 610px; /* Adjust the maximum height as needed */
+    margin: 0 auto;
+    text-align: center;
+    overflow: hidden; /* Hide the overflow of the image */
+    display: inline-block;
+    position: relative;
+}
+
+.slide img {
+    width: 100%;
+    height: auto;
+}
+
+/* Style the text on top of the image */
+.slide h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 60px;
+    transform: translate(-50%, -50%);
+    color: white; /* Customize the text color */
+}
+.slide p{
+    position: absolute;
+    margin-top: 100px;
+    top: 50%;
+    left: 50%;
+    font-size: 25px;
+    transform: translate(-50%, -50%);
+    color: white; /* Customize the text color */
+}
+
+
+#cards{
+    position: absolute;
+    bottom: -380px;
     padding: 5vw 8vw 0 8vw;
     text-align: center;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 10rem;
+}
+#cards .fea-box1{
+    width: 60%;
+    height: 100%;
+    font-size: 30px;
+    background-color: rgb(22, 47, 105);
+    text-align: start;
+    color: white;
+    padding: 15px 25px;
+}
+#cards .fea-box{
+    width: 60%;
+    height: 100%;
+    background-color: white;
+    text-align: start;
+    padding: 10px 20px;
+}
+#cards .fea-box i{
+    font-size: 2.3rem;
+    color: rgb(44, 44, 80);
+    text-align: center;
+}
+#cards .fea-box h3{
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: rgb(46, 46, 59);
+  padding: 14px 0 7px 0;
+}
+#cards .fea-box span{
+  font-size: 1rem;
+  font-weight: 400;
+  color: rgb(70, 70, 87);
+}
+
+/* Style the buttons */
+
+#features{
+   margin-top: 25%;
+    padding: 5vw 8vw 0 8vw;
+    text-align: center;
+}
+#features h2{
+    font-size: 50px;
+}
+#features label{
+    font-size: 18px;
 }
 #features .fea-base{
     display: grid;
@@ -142,7 +203,7 @@ nav .navigation ul li a:hover{
     margin-top: 50px;
 }
 #features .fea-box{
-    background-color: #f9f9ff;
+    background-color: #61b0e4;
     text-align: start;
     padding: 10px 20px;
 }
@@ -167,21 +228,29 @@ nav .navigation ul li a:hover{
     padding: 8vw 8vw 8vw 8vw;
     text-align: center;
 }
-#course .course-box{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 1rem;
-    margin-top: 50px;
+#course .course-text{
+   display: flex;
+   gap: 100px;
+   margin-top: 5rem;
 }
-#course .courses{
+#course .left{
     text-align: start;
-    background-color: #f9f9ff;
     height: 100%;
+    width: 90%;
+}
+#course .right{
+    width: 100%;
     position: relative;
 }
-#course .courses img{
+.right-img{
+    position: absolute;
+    bottom: -80px;
+    right: 70px;
     width: 100%;
-    height: 60%;
+}
+#course .right img{
+    width: 100%;
+    height: 90%;
     background-size: cover;
     background-position: center;
 }
@@ -212,43 +281,30 @@ nav .navigation ul li a:hover{
     background-image: linear-gradient(rgba(99, 112, 168, 0.5), rgba(81, 91, 233, 0.5)), url("images/signup.jpg");
     width: 100%;
     height: 100%;
+    margin-top: 6rem;
     background-size: cover;
     background-position: center;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
 }
-#registration .reminder{
-    color: #fff;
-}
-#registration .reminder h1{
-    color: #fff;
-}
-#registration .reminder .time{
-    display: flex;
-    margin-top: 40px;
-}
-#registration .reminder .time .date{
-    text-align: center;
-    padding: 13px 33px;
-    background-color: rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(4px);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    border-radius: 10px;
-    margin: 0 5px 10px 5px;
-    border: 1px solid rgba(225, 225, 225, 0.18);
-    font-size: 1.1rem;
-    font-weight: 600;
-}
+/*  */
 #registration .form{
-    background-color: #fff;
+    background-color: #0c1d319d;
     border-radius: 8px;
+    width: 60%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     padding: 40px;
+    margin-left: 250px;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
 #registration .form input{
+    margin: 15px 0;
+    padding: 15px 10px;
+    border: 1px solid rgb(84, 40, 241);
+    outline: none;
+}
+#registration .form textarea{
     margin: 15px 0;
     padding: 15px 10px;
     border: 1px solid rgb(84, 40, 241);
@@ -259,11 +315,16 @@ nav .navigation ul li a:hover{
     font-size: 0.9rem;
     font-weight: 500;
 }
+#registration .form textarea::placeholder{
+    color: #413c3c;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
 #registration .form .btn{
     margin-top: 20px;
 }
 #registration .form a.yellow{
-    background-color: #FDC93B;
+    background-color: #3b9cfd;
     color: #fff;
     transition: 0.3s ease;
     text-decoration: none;
@@ -280,39 +341,85 @@ nav .navigation ul li a:hover{
 
 /* experts */
 #experts{
-    padding: 8vw 8vw 8vw 8vw;
+    padding: 6vw 8vw 8vw 8vw;
     text-align: center;
 }
+
 #experts .expert-box{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 1rem;
+    display: flex;
+    gap: 40px;
     margin-top: 50px;
 }
+#experts .prof1{
+    display: flex;
+    gap: 30px;
+    min-width: 100%;
+    height: 50%;
+}
+
 #experts .expert-box .profile{
     background: #fafaf1;
     padding: 30px 10px;
 }
-.pro-links{
-    margin-top: 10px;
+#experts .prof1-text{
+    margin-top: 200px;
 }
-.pro-links i{
-    padding: 10px 13px;
-    border: 1px solid rgb(21, 21, 100);
-    cursor: pointer;
-    transition: 0.3s ease;
+.expert-box {
+    width: 100%; /* Set the width as needed */
+    overflow: hidden;
+    position: relative;
 }
-.pro-links i:hover{
-   background-color: rgb(21, 21, 100);
-   color: #fff;
-    border: 1px solid rgb(21, 21, 100);
-    cursor: pointer;
+
+.expert-box {
+    overflow: hidden;
 }
+
+.expert-box {
+    overflow: hidden;
+}
+
+.expert-box {
+    overflow: hidden;
+}
+
+.expert-box {
+    text-align: center;
+}
+
+.expert-box {
+    text-align: center;
+}
+
+.carousel-container {
+    overflow: hidden;
+    position: relative;
+    width: 80%; /* Adjust this value to control the visible width of the carousel */
+    margin: 0 auto;
+}
+
+.carousel {
+    display: flex;
+    transition: transform 1s ease; /* Adjust the duration and easing as needed */
+}
+
+.prof1 {
+    flex: 0 0 33.33%; /* Adjust this value to control the width of each item */
+    padding: 20px;
+}
+
+img {
+    max-width: 100%;
+}
+
+
+
+
 
 /* footer */
 footer{
     padding: 8vw;
-    background-color: #101c32;
+    background-color: #9cd4f9;
+    /* background-color: #101c32; */
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -412,6 +519,24 @@ footer .copyright .pro-links i:hover{
     nav img {
         width: 130px;
     }
+    .phone-no {
+        font-size: 15px;
+        font-weight: 600;
+      }
+      
+      .phone-call {
+        border: 2px solid black; 
+        box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+        padding: 5px 10px;
+        border-radius: 20px;
+        display: flex;
+        gap: 4px;
+        color: black;
+      }
+      .phone-call i{
+        font-size: 15px;
+      }
+
     #menu-btn{
        display: initial;
     }
@@ -446,6 +571,50 @@ footer .copyright .pro-links i:hover{
     nav .navigation ul li a{
         color: #fff;
     }
+
+
+    .slide h1 {
+ font-size: 35px;
+ 
+}
+.slide p{
+    margin-top: 75px;
+    font-size: 20px;
+}
+
+
+#cards{
+    position: absolute;
+    bottom: -570px;
+    padding: 5vw 4vw 0 4vw;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 50%;
+}
+#cards .fea-box1{
+    width: 100%;
+    height: 60%;
+    font-size: 20px;
+    background-color: rgb(22, 47, 105);
+    text-align: start;
+    color: white;
+    padding: 15px 25px;
+}
+#cards .fea-box{
+    width: 100%;
+    height: 60%;
+    background-color: white;
+    text-align: start;
+    padding: 10px 20px;
+}
+#cards .fea-box i{
+    font-size: 1.5rem;
+    color: rgb(44, 44, 80);
+    text-align: center;
+}
+
     #home{
         padding-top: 0px;
     }
@@ -455,18 +624,79 @@ footer .copyright .pro-links i:hover{
     #features{
         padding: 8vw 4vw 0 4vw;
     }
+
+    #features{
+        margin-top: 100%;
+         padding: 5vw 4vw 0 4vw;
+         text-align: center;
+     }
+     #features h2{
+         font-size: 35px;
+     }
+     #features label{
+         font-size: 18px;
+     }
     #course{
         padding: 8vw 4vw 0 4vw;
+        margin-bottom: 20%;
+    }
+
+    #course .course-text{
+       display: flex;
+       flex-direction: column;
+       gap: 40px;
+       margin-top: 5rem;
+    }
+    #course .left{
+        text-align: start;
+        height: 100%;
+        width: 90%;
+    }
+    #course .right{
+        width: 100%;
+        position: relative;
+        margin-left: 15px;
+    }
+    .right-img{
+        position: absolute;
+        bottom: -80px;
+        right: 90px;
+        width: 100%;
+    }
+    #course .right img{
+        width: 100%;
+        height: 90%;
+        background-size: cover;
+        background-position: center;
+    }
+    #experts .expert-box{
+        display: flex;
+        gap: 40px;
+        /* margin-top: 50px; */
+    }
+    #experts .prof1{
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        min-width: 100%;
+    }
+    
+    #experts .expert-box .profile{
+        background: #fafaf1;
+        padding: 30px 10px;
+    }
+    #experts .prof1-text{
+        margin-top: 20px;
+    }
+    
+    img {
+        max-width: 70%;
     }
     #registration{
         margin-top: 8vw;
         padding: 6vw 4vw 6vw 4vw;
     }
-    #registration .reminder .time{
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 40px;
-    }
+   
     #experts{
         padding: 8vw 8vw 4vw 8vw;
         text-align: center;
@@ -476,7 +706,47 @@ footer .copyright .pro-links i:hover{
     }
 }
 
+
 @media (max-width: 475px) {
+
+    .phone-no {
+        font-size: 14px;
+        font-weight: 600;
+      }
+      
+      .phone-call {
+        border: 2px solid black; 
+        box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+        padding: 5px 10px;
+        border-radius: 20px;
+        display: flex;
+        gap: 4px;
+        color: black;
+      }
+      .phone-call i{
+        font-size: 13px;
+      }
+      .slide h1 {
+        font-size: 35px;
+        
+       }
+       .slide p{
+           margin-top: 75px;
+           font-size: 20px;
+          
+       }
+       #registration .form{
+        background-color: #0c1d319d;
+        border-radius: 8px;
+        width: 60%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 40px;
+        margin-right: 100px;
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    }
+      
     #registration{
         text-align: center;
         display: flex;
